--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --red: #F24579;
     --black: #494E4E;
     --grey: #828686;
+    --light-grey: rgb(231, 231, 231);
 }
 
 *::after,
@@ -59,6 +60,38 @@ h3 {
 .btn img {
     width: 1em;
     padding: 0;
+    margin: -2px;
+}
+
+.btn:hover img {
+    filter: brightness(0) invert(1);
+}
+
+.popup {
+    background: var(--black);
+    color: white;
+    border-radius: 5px;
+    padding: 0.8em;
+    text-align: center;
+    position: absolute;
+    left: 11em;
+    margin-top: .5em;
+    font-size: 0.8em;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+}
+
+.popup a {
+    background: var(--purple);
+    color: white;
+    padding: 0.2em 0.5em;
+    margin-top: 0.5em;
+    display: block;
+}
+
+.hidden {
+    display: none;
+    transition: all ease-in-out 0.5s;
+
 }
 
 .text-purple {
@@ -81,8 +114,24 @@ h3 {
     justify-content: space-between;
 }
 
+.header .logo {
+    position: relative;
+    display: flex;
+    font-weight: bold;
+}
+
+.header .logo::after {
+    content: "● Available for work";
+    font-size: .7em;
+    position: absolute;
+    left: 110%;
+    width: 110%;
+    color: var(--green);
+    font-weight: normal;
+}
+
 .header .nav a {
-    margin-right: 4em;
+    margin-left: 4em;
 }
 
 .hero {
@@ -105,9 +154,19 @@ h3 {
     margin-bottom: 1em;
 }
 
+.hero .contact {
+    display: block;
+    position: relative;
+    line-height: 2em;
+}
+
+.email:active .popup {
+    display: block;
+}
+
 /* SKILL */
 .skills {
-    margin-top: 5em;
+    margin-top: 4em;
 }
 
 
@@ -132,7 +191,7 @@ h3 {
 
 /* WORKS */
 .works {
-    margin-top: 5em;
+    margin-top: 4em;
 }
 
 .works ul {
@@ -143,4 +202,89 @@ h3 {
 
 .works li {
     width: 30%;
+}
+
+
+.footer {
+    margin-top: 4em;
+    border-top: 1px solid var(--light-grey);
+    color: var(--grey);
+    padding-top: 1em;
+}
+
+
+/* RESPONSIVE  */
+
+@media screen and (max-width:760px) {
+
+    body {
+        padding: 2em;
+    }
+}
+
+@media screen and (max-width:510px) {
+
+    .btn {
+        border: none;
+        padding: 0 .1em;
+    }
+
+    .btn img {
+        padding: 0;
+    }
+
+    .header {
+        display: block;
+    }
+
+
+    .header .logo:after {
+        left: 120px;
+    }
+
+    .header .nav {
+        margin-top: 1em;
+    }
+
+    .header .nav li a {
+        margin-right: 2em;
+        margin-left: 0;
+        margin-top: 2em;
+    }
+
+    .hero {
+        margin-top: 3em;
+    }
+
+    .hero .main {
+        font-size: 2em;
+        line-height: 1.5em;
+    }
+
+    .hero .tagline {
+        font-size: 1em;
+        margin-top: 1em;
+    }
+
+    .skills,
+    .works {
+        margin-top: 3em;
+        border-bottom: 1px solid var(--light-grey);
+        padding-bottom: 2em;
+    }
+
+    .skills ul,
+    .works ul {
+        display: block;
+    }
+
+    .skills ul .skill,
+    .works ul .work {
+        width: 100%;
+    }
+
+    .popup {
+        left: 100px;
+    }
+
 }
