--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ h1 {
 }
 
 h3 {
-    font-size: 1em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
 .btn {
-    border: 1px solid var(--purple);
+    background: #F6F8FF;
     padding: 0.2em 0.5em;
     border-radius: 0.1em;
     color: var(--purple);
@@ -151,7 +151,7 @@ h3 {
 .hero .tagline {
     font-size: 1.3em;
     color: var(--grey);
-    margin-bottom: 1em;
+    margin-bottom: .5em;
 }
 
 .hero .contact {
@@ -166,7 +166,7 @@ h3 {
 
 /* SKILL */
 .skills {
-    margin-top: 4em;
+    margin-top: 3em;
 }
 
 
@@ -191,7 +191,7 @@ h3 {
 
 /* WORKS */
 .works {
-    margin-top: 4em;
+    margin-top: 3em;
 }
 
 .works ul {
@@ -254,11 +254,13 @@ h3 {
 
     .hero {
         margin-top: 3em;
+        text-align: center !important;
     }
 
     .hero .main {
         font-size: 2em;
         line-height: 1.5em;
+        font-weight: bolder;
     }
 
     .hero .tagline {
@@ -267,7 +269,7 @@ h3 {
     }
 
     .skills,
-    .works {
+        {
         margin-top: 3em;
         border-bottom: 1px solid var(--light-grey);
         padding-bottom: 2em;
