--- a/style.css
+++ b/style.css
@@ -124,11 +124,10 @@ h3 {
 .header .logo::after {
     content: "● Available for work";
     font-size: .7em;
-    position: absolute;
-    left: 110%;
     width: 110%;
     color: var(--green);
     font-weight: normal;
+    margin-left: 1em;
 }
 
 .header .nav a {
@@ -146,12 +145,13 @@ h3 {
 
 .hero {
     margin-top: 5em;
+    text-align: center;
 }
 
 
 .hero .main {
     font-size: 2em;
-    font-size: 100;
+    font-weight: bold;
 }
 
 .hero .main span {
@@ -187,7 +187,7 @@ h3 {
 }
 
 .skills li {
-    width: 30%;
+    width: 31%;
 }
 
 .skills img {
@@ -201,7 +201,7 @@ h3 {
 
 /* WORKS */
 .works {
-    margin-top: 3em;
+    margin-top: 2em;
 }
 
 .works ul {
@@ -217,7 +217,7 @@ h3 {
 
 .footer {
     margin-top: 4em;
-    border-top: 1px solid var(--light-grey);
+    border-top: 1px solid var(--light-purple);
     color: var(--grey);
     padding-top: 1em;
 }
@@ -234,22 +234,9 @@ h3 {
 
 @media screen and (max-width:510px) {
 
-    .btn {
-        border: none;
-        padding: 0 .1em;
-    }
-
-    .btn img {
-        padding: 0;
-    }
 
     .header {
         display: block;
-    }
-
-
-    .header .logo:after {
-        left: 120px;
     }
 
     .header .nav {
@@ -264,7 +251,7 @@ h3 {
 
     .hero {
         margin-top: 3em;
-        text-align: center !important;
+        text-align: left;
     }
 
     .hero .main {
@@ -274,8 +261,8 @@ h3 {
     }
 
     .hero .tagline {
-        font-size: 1em;
-        margin-top: 1em;
+        font-size: 1.2em;
+        margin-top: .5em;
     }
 
     .skills,
@@ -298,5 +285,7 @@ h3 {
     .popup {
         left: 100px;
     }
+
+
 
 }
