--- a/style.css
+++ b/style.css
@@ -81,10 +81,11 @@ a:visited {
     padding: 0.8em;
     text-align: center;
     position: absolute;
-    left: 11em;
+    left: 50%;
     margin-top: .5em;
     font-size: 0.8em;
     box-shadow: 0px 0px 20px 1px rgb(0 0 0 / 5%);
+    z-index: 1000;
 }
 
 .popup a {
@@ -93,13 +94,12 @@ a:visited {
     padding: 0.2em 0.5em;
     margin-top: 0.5em;
     display: block;
-    z-index: 999999;
+    cursor: pointer;
 }
 
 .hidden {
     display: none;
     transition: all ease-in-out 0.5s;
-
 }
 
 .text-purple {
@@ -173,7 +173,6 @@ a:visited {
 
 .hero .contact {
     display: block;
-    position: relative;
     line-height: 2em;
 }
 
@@ -272,6 +271,10 @@ a:visited {
         margin-top: .5em;
     }
 
+    .hero .contact {
+        position: relative;
+    }
+
     .skills,
         {
         margin-top: 3em;
@@ -289,8 +292,10 @@ a:visited {
         width: 100%;
     }
 
+
     .popup {
         left: 100px;
+        z-index: 1000;
     }
 
 
