Fixed variable color format

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --red: #F24579;
     --black: #494E4E;
     --grey: #828686;
-    --light-purple: #F6F8FF;
-    --light-grey: rgb(231, 231, 231);
+    --light-purple: #f6f8ff;
+    --light-grey: #e7e7e7;
 }
 
 *::after,
