--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a:visited {
 
 .popup {
     color: var(--purple);
+    background: white;
     border-radius: 5px;
     padding: 0.8em;
     text-align: center;
@@ -185,6 +186,8 @@ a:visited {
     display: block;
     line-height: 2em;
 }
+
+
 
 .email:active .popup {
     display: block;
