--- a/style.css
+++ b/style.css
@@ -240,3 +240,45 @@ a:visited {
     color: var(--grey);
     padding-top: 1em;
 }
+
+
+/* BIO ******************* */
+.bio {
+    padding: 0 !important;
+    margin: 0 !important;
+    box-sizing: border-box !important -;
+}
+
+.bio .at {
+    text-align: center;
+    color: var(--purple)
+}
+
+.bio .avatar {
+    width: 150px;
+    height: 150px;
+    background: url('img/avatar.jpg');
+    background-size: cover;
+    margin: 20px auto;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 5px solid var(--light-purple);
+}
+
+.bio ul {
+    width: 80vw;
+    height: calc(100vh - 240px);
+    margin: 20px auto;
+    padding: 0;
+}
+
+.bio ul li a {
+    background: var(--light-purple);
+    display: block;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding: 10px;
+    font-size: 2rem;
+    border-radius: 5px;
+    border: 1px solid var(--purple);
+}
